[gd_scene load_steps=2 format=3 uid="uid://c8x4d9nj2prt5"]

[ext_resource type="Script" path="res://scripts/ui/rest_ui.gd" id="1_rest_ui"]

[node name="RestUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_rest_ui")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "REST SITE"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
custom_minimum_size = Vector2(0, 40)

[node name="HealButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Heal All Champions"
custom_minimum_size = Vector2(0, 40)

[node name="UpgradeSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
separation = 8

[node name="UpgradeLabel" type="Label" parent="VBoxContainer/UpgradeSection"]
layout_mode = 2
text = "Upgrade Champions"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="UpgradeCardsGrid" type="GridContainer" parent="VBoxContainer/UpgradeSection"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
custom_minimum_size = Vector2(0, 150)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
custom_minimum_size = Vector2(0, 40)
